# jonny5_ROS2_VR

./: .gitattributes  .gitignore  LICENSE  README.md
firmware/stm32/: NOTES.md  platformio.ini
firmware/stm32/zephyr/: CMakeLists.txt  Kconfig  prj.conf
raspberry/: requirements-controller.txt
raspberry/config_runtime/imu/: imu_ee_mount.json
raspberry/config_runtime/kinematics/: j5_poe_params.json
raspberry/config_runtime/robot/: controller_mappings.json  j5_settings.json  routing_config.json
raspberry/config_runtime/video/: mediamtx.yml  mediamtx_initial.yml  mediamtx_inspection.yml  mediamtx_lowlatency.yml  mediamtx_maxres.yml  mediamtx_zoomfriendly.yml  video_pipeline.yaml
raspberry/config_runtime/vr/: webrtc-calibration.json
raspberry/controller/: __init__.py
raspberry/controller/audit/: analyze_pitch_direction.py  verify_assist_audit.py  (+14 more)
raspberry/systemd/: jonny5-captive-portal.service  jonny5-https-443-proxy.service  jonny5-https.service  jonny5-mediamtx.service  jonny5-refocus-cams.service  jonny5-refocus-cams.timer  jonny5-spi-j5vr.service  jonny5-video-fallback.timer  jonny5-video-init.service  jonny5-ws-teleop.service
raspberry/tools/: calibrate_world_bias.py  measure_mjpeg_baseline.py  measure_mjpeg_fullstack.py
ros2_ws/: .gitignore  README.md  SMOKE_TEST.md
ros2_ws/deploy/: Dockerfile  README_PI.md  docker-compose.mock.yml  docker-compose.yml  entrypoint.sh  host_setup_pi.sh  j5-net-autoswitch.service  j5_net_autoswitch.sh  jonny5-ros2.service
ros2_ws/docs/: ADR-001-migration-strategy.md
ros2_ws/src/jonny5_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/jonny5_bringup/config/: jonny5.params.yaml
ros2_ws/src/jonny5_bringup/launch/: bringup.launch.py
ros2_ws/src/jonny5_hardware/: package.xml  setup.cfg  setup.py
ros2_ws/src/jonny5_hardware/jonny5_hardware/: mock_spi.py  spi_bridge_node.py  spi_driver_node.py
ros2_ws/src/jonny5_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/jonny5_sim/jonny5_sim/: legacy_telemetry_sim_node.py  teleop_intent_sim_node.py
ros2_ws/src/jonny5_teleop_vr/: package.xml  setup.cfg  setup.py
ros2_ws/src/jonny5_teleop_vr/jonny5_teleop_vr/: ws_teleop_bridge_node.py
ros2_ws/tools/: smoke_ros2_dryrun.sh  spi_shm_bridge.py  telemetry_web_bridge.py
scripts/: select_video_pipeline.sh  start_mediamtx.sh
web/dashboard/: controllers.html  ik.html  iklive.html  imu-vr.html  index.html  joints.html  navbar.html  pickplace.html  settings.html  test.html  twin.html  vr-live.html  vr.html  whep_cam_embed.html
web/vr/: viewer_stereo_xr.html  viewer_webrtc.html
(+110 files in other folders)
