<?xml version="1.0"?>
<package format="3">
  <name>jonny5_bringup</name>
  <version>0.1.0</version>
  <description>Launch and runtime configuration for JONNY5 ROS2 bringup.</description>
  <maintainer email="dev@corgiolu-labs.local">corgiolu-labs</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>jonny5_description</exec_depend>
  <exec_depend>jonny5_hardware</exec_depend>
  <exec_depend>jonny5_sim</exec_depend>
  <exec_depend>jonny5_teleop_vr</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
