<?xml version="1.0"?>
<package format="3">
  <name>jonny5_sim</name>
  <version>0.1.0</version>
  <description>Dry-run simulators for local JONNY5 ROS2 development without robot hardware.</description>
  <maintainer email="dev@corgiolu-labs.local">corgiolu-labs</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>